Fix visible div.pagination at the bottom

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -132,3 +132,4 @@ main
 }
 
 .filter a.current { background: orangered; }
+.pagination { visibility: hidden }
